--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,7 +26,7 @@
             </p>
           </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu dropdown-menu-right">
-            <a ngbDropdownItem href="http://localhost:4200/#/dashboard">Modifier votre compte</a>
+            <a ngbDropdownItem href="http://localhost:4200/#/editUtilisateur/{idUtilisateur}">Modifier votre compte</a>
             <a ngbDropdownItem href="http://localhost:4200/#/logout">Se déconnecter</a>
           </div>
         </li>
