--- a/src/app/pages/taches/taches.component.html
+++ b/src/app/pages/taches/taches.component.html
@@ -130,7 +130,7 @@
                                         (click)="deleteTache(a.idTache)">Delete</button>
                                     <button class="btn btn-primary btn-round"
                                         (click)="editTache(a.idTache)">edit</button>
-                                    <button class="btn btn-primary btn-round" (click)="listPhase(a.idTache)">Voir les
+                                    <button class="btn btn-warning btn-round" (click)="listPhase(a.idTache)">Voir les
                                         phases</button>
                                 </td>
 
