--- a/src/app/pages/phase/phase.component.html
+++ b/src/app/pages/phase/phase.component.html
@@ -2,28 +2,30 @@
     <div class="col-md-12">
         <div class="card card-user">
             <div class="card-header">
-                <h5 class="card-title">Ajouter une phase</h5>
+                <button (click)="retourTaches()" class="btn btn-outline-primary btn-round">Retourner à la liste des
+                    tâches</button>
+                <h5 class="card-title">Ajouter une phase à la tâche suivante :</h5>
             </div>
             <div class="card-body">
                 <form (ngSubmit)="savePhase()">
                     <div class="row">
                         <div class="col-md-6 pr-1">
                             <div class="form-group">
-                                <label>Tâche</label>
-                                <input type="text" class="form-control" value='{{tache.titreTache}}'>
+                                <label>Titre de la tâche sélectionnée</label>
+                                <input type="text" class="form-control" value='{{tache.titreTache}}' disabled>
                             </div>
                         </div>
-
                     </div>
+
                     <div class="row">
-                        <div class="col-md-6 pr-1">
+                        <div class="col-md-12 pr-1">
                             <div class="form-group">
                                 <label>Nom</label>
                                 <input type="text" class="form-control" [(ngModel)]="phase.nom" name="nom"
                                     placeholder="Nom">
                             </div>
                         </div>
-                        <div class="col-md-6 px-1">
+                        <div class="col-md-6 pr-1">
                             <div class="form-group">
                                 <label>Date de début</label>
                                 <input type="date" class="form-control" [(ngModel)]="phase.dateDebut" name="dateDebut"
@@ -56,7 +58,8 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Liste des phases</h4>
+                <h4 class="card-title">Liste des phases de la tâche sélectionnée</h4>
+                <p>Titre de la tâche sélectionnée : {{tache.titreTache}}</p>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -65,20 +68,20 @@
                             <th>Nom</th>
                             <th>Date début</th>
                             <th>Date Fin</th>
-                            <th>Tache</th>
-                            <th>Action</th>
+                            <!--<th>Tache</th>
+                            <th>Action</th>-->
                         </thead>
                         <tbody>
                             <tr *ngFor="let p of phases">
                                 <td>{{p.nom}}</td>
                                 <td>{{p.dateDebut}}</td>
                                 <td>{{p.dateFin}}</td>
-                                <td>{{p.tache_fk.titreTache}}</td>
-                                <td>
+                                <!--<td>{{p.tache_fk.titreTache}}</td>-->
+                                <!-- <td>
                                     <button class="btn btn-primary btn-round"
                                         (click)="deletePhase(p.idPhase)">Delete</button>
                                     <button class="btn btn-primary btn-round" (click)="editPhase(p)">Edit</button>
-                                </td>
+                                </td>-->
 
                             </tr>
                         </tbody>
