--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       </div>
     </a>
     <a href="http://localhost:4200/#/" class="simple-text logo-normal">
-      Creative Tim
+      Gestion CADJ
     </a>
   </div>
   <ul class="nav">
