modif sidebar et href icon app

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <img src="https://cdn-icons-png.flaticon.com/512/6974/6974016.png">
       </div>
     </a>
-    <a href="http://localhost:4200/#/" class="simple-text logo-normal">
+    <a href="http://localhost:4200/#/dashboard" class="simple-text logo-normal">
       Gestion CADJ
 
     </a>
